# portfolio

./: .env.example  .gitignore  Makefile  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: lint.yml  tests.yml
apps/: docker-compose.yml
apps/bot/: Dockerfile  entrypoint.sh  env.example  main.py  pyproject.toml
apps/bot/core/: config.py  database.py
apps/bot/handlers/: __init__.py  common.py  history.py  status.py
apps/bot/handlers/commands/: __init__.py  base.py  connections.py  projects.py
apps/bot/models/: __init__.py  command_history.py
apps/bot/scripts/: init_db.py
apps/bot/services/: admin_client.py  history_service.py
apps/web/: .dockerignore  .env.example  .prettierignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  temp.html  tsconfig.app.json  vite.config.ts
apps/web/src/: vite-env.d.ts
client/: .env.example  index.html  package.json  tailwind.config.ts  temp.html  tsconfig.app.json
client/src/app/: index.tsx
infrastructure/: docker-compose.override.yml.example  docker-compose.yml
infrastructure/minio/: init-buckets.sh  minio.conf
infrastructure/nginx/: Dockerfile  entrypoint.sh  maintenance.html  nginx.conf  nginx.conf.template  nginx.dev.conf
infrastructure/nginx/ssl/: .gitignore  README.md
infrastructure/postgres/: init-multiple-databases.sh  pg_hba.conf  postgresql.conf
infrastructure/redis/: redis.conf
infrastructure/redpanda/: init-topics.sh  redpanda.yaml
scripts/: dev-connections.sh  dev-gateway.sh  dev-setup.sh  get-admin-token.sh
services/: docker-compose.yml
services/admin/: Dockerfile  entrypoint.sh  env.example  main.py  pyproject.toml
services/admin/core/: config.py
services/admin/schemas/: __init__.py  request.py
services/admin/scripts/: generate_grpc.py
services/admin/services/: message_repository.py  upload_client.py
services/admin/workers/: grpc_service.py
services/applications/: docker-compose.yml
services/applications/connections/: Dockerfile  main.py  pyproject.toml
services/applications/projects/: Dockerfile  main.py  pyproject.toml
services/basis/: docker-compose.yml
services/basis/admin/: .gitignore  Dockerfile  env.example  pyproject.toml
services/basis/admin/api/v1/: router.py
services/basis/admin/core/: config.py  logging.py
services/basis/admin/scripts/: generate_grpc.py
services/basis/admin/services/: __init__.py  kafka_manager.py  message_service.py  modules_client.py
services/basis/gateway/: Dockerfile  README.md  main.py  pyproject.toml
services/basis/modules/: Dockerfile  entrypoint.sh  env.example  main.py  pyproject.toml
services/connections/: .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  env.example  main.py  pyproject.toml  requirements.txt
services/gateway/: .gitignore  Dockerfile  entrypoint.sh  env.example  main.py  pyproject.toml
services/gateway/api/v1/: api.py
services/gateway/api/v1/dependencies/: __init__.py  security.py
services/gateway/api/v1/endpoints/admin/: commands.py  messages.py  router.py
services/gateway/api/v1/endpoints/admin/endpoints/: commands.py
services/gateway/api/v1/endpoints/connections/: __init__.py  connections.py  health.py  images.py  router.py  status.py  working_on.py
services/gateway/api/v1/endpoints/modules/: __init__.py  router.py  services.py  utils.py
services/gateway/api/v1/endpoints/modules/endpoints/: list_services.py
services/gateway/api/v1/endpoints/projects/: utils.py
services/gateway/api/v1/endpoints/projects/endpoints/: list_projects.py  project_detail.py
services/gateway/core/: config.py
services/gateway/schemas/: health.py  modules.py
services/gateway/schemas/connections/: __init__.py  connections.py  health.py  image.py  status.py  working.py
services/gateway/schemas/projects/: projects.py
services/gateway/scripts/: admin_token.py  generate_grpc.py  run_service.py
services/gateway/services/: dependencies.py  grpc_client_manager.py  redis_manager.py
services/gateway/tests/integration/: conftest.py  test_gateway_endpoints.py
services/modules/: Dockerfile  entrypoint.sh  env.example  main.py  pyproject.toml
services/modules/core/: config.py  logging.py
services/modules/models/: services.py
services/modules/scripts/: generate_grpc.py  init_db.py  run_service.py
services/modules/services/: registry.py
services/modules/tests/integration/: test_modules_service.py
services/modules/workers/: grpc_service.py
services/projects/: README.md  entrypoint.sh  env.example  pyproject.toml
services/projects/api/v1/: router.py
services/projects/core/: database.py  logging.py
services/projects/models/: __init__.py  project.py
services/projects/schemas/: health_check.py  project.py
services/projects/scripts/: init_db.py  run_service.py
services/projects/services/: health_service.py  project_service.py
services/projects/tests/integration/: conftest.py
services/projects/workers/: consumer.py  grpc_service.py
services/upload/: Dockerfile  entrypoint.sh  env.example  main.py  pyproject.toml  requirements.txt
services/upload/api/v1/: router.py
services/upload/api/v1/endpoints/: __init__.py  upload.py
services/upload/core/: config.py  minio_client.py
services/upload/schemas/: __init__.py  upload.py
services/upload/services/: dependencies.py  storage_service.py
services/upload/tests/integration/: test_upload_service.py
shared/python/: .gitignore  Dockerfile  README.md  database_utils.py  env_utils.py  pyproject.toml  schemas.py  setup.py
shared/python/shared/clients/: __init__.py  modules_client.py
shared/python/shared/consumers/: __init__.py  base.py
shared/python/shared/logging/: __init__.py  utils.py
shared/python/shared/proto/: connections.proto
shared/python/shared/proto/admin/: admin.proto
shared/python/shared/proto/modules/: modules.proto
shared/python/shared/proto/projects/: projects.proto
shared/python/shared/proto/upload/: upload.proto
shared/python/shared/schemas/: __init__.py  modules.py
shared/python/shared/scripts/: db_init.py  generate_grpc.py
(+232 files in other folders)
