[tool.poetry]
name = "portfolio-telegram-bot"
version = "0.1.0"
description = "Telegram bot for Admin Service"
authors = ["iizhukov <iizhukov@icloud.com>"]
packages = [
    {include = "core" },
    {include = "handlers" },
    {include = "services" },
    {include = "models" },
    {include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "3.22.0"
httpx = ">=0.27.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
sqlalchemy = ">=2.0.0"
asyncpg = ">=0.29.0"
greenlet = "^3.2.4"

[tool.poetry.dependencies.portfolio-shared]
path = "../../shared/python"
develop = true

[tool.poetry.group.dev.dependencies]
pytest = "8.0.0"
pytest-asyncio = "0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

