[tool.poetry]
name = "portfolio-gateway"
version = "0.1.0"
description = "API Gateway Service"
authors = ["iizhukov <iizhukov@icloud.com>"]
readme = "README.md"
packages = [
    { include = "api" },
    { include = "core" },
    { include = "schemas" },
    { include = "services" },
    { include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.119.0"
uvicorn = "0.37.0"
grpcio = ">=1.70.0"
protobuf = ">=6.0.0"
pydantic = "2.12.2"
pydantic-settings = "2.11.0"
redis = {extras = ["hiredis"], version = "5.0.1"}
httpx = "0.28.1"
tenacity = "^8.2.3"

[tool.poetry.dependencies.portfolio-shared]
path = "../../shared/python"
develop = true

[tool.poetry.group.dev.dependencies]
grpcio-tools = ">=1.70.0"
confluent-kafka-stubs = "^0.0.3"
mypy-protobuf = "^3.6.0"

[tool.poetry.scripts]
generate-grpc = "scripts.generate_grpc:main"
service = "scripts.run_service:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

