[tool.poetry]
name = "portfolio-upload"
version = "0.1.0"
description = ""
authors = ["iizhukov <iizhukov@icloud.com>"]
packages = [
    { include = "api" },
    { include = "core" },
    { include = "schemas" },
    { include = "services" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.119.0"
uvicorn = "0.37.0"
minio = "7.2.3"
python-multipart = "0.0.9"

[tool.poetry.dependencies.portfolio-shared]
path = "../../shared/python"
develop = true

[tool.poetry.group.dev.dependencies]
pytest = "8.0.0"
pytest-asyncio = "0.23.0"

[tool.poetry.scripts]
service = "scripts.run_service:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
